adult/logs/create_fluctuations_15091918_619.out
SLURM_JOBID:  15092540
SLURM_ARRAY_TASK_ID:  619
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 5, 0.005, 80)


